--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                   <li class="nav-item">
                     <a class="nav-link" href="#"><img src="cart.svg" alt="cart"></a>
                   </li>
+                    <li>
+                        added list
+                    </li>
 
 
 
